@@ -1,3 +1,7 @@
+2004-03-16  Zoltan Varga  <vargaz@freemail.hu>
+
+	* sparc/sparc-codegen.h: Add v9 branches with prediction.
+
 2004-03-15  Bernie Solomon  <bernard@ugsolutions.com>
 
 	* sparc/sparc-codegen.h: tweak sparc_mov_reg_reg
